Add meta field to key item for metadata decryption
